Also provide images and fonts from lvm-las-assets

--- a/index.less
+++ b/index.less
@@ -1,1 +1,5 @@
+// URL Root for all fonts
+@font-path: '/assets/';
+
+// Import LVM LAS Assets
 @import "npm://lvm-las-assets/src/styles/main.less";
