--- a/frontend/index.less
+++ b/frontend/index.less
@@ -1,5 +1,5 @@
 // URL Root for all fonts
-@font-path: '/assets/';
+@font-path: '/assets/fonts/';
 
 // Import LVM LAS Assets
 @import "npm://lvm-las-assets/src/styles/main.less";
