--- a/views/search_results.mustache
+++ b/views/search_results.mustache
@@ -1,6 +1,24 @@
 <div class="container">
-  <h1>Suchergebnisse</h1>
-  <p>
-    Ihre Suchergebnisse für '{{ query }}'
-  </p>
+  <header class="page-header">
+    <h1>Suchergebnisse <small>für '{{ query }}'</small></h1>
+  </header>
+
+  <ul class="onebox-results">
+    {{#results}}
+      <li class="list-group-item selected">
+        <a href="/partners/{{ partnerId }}">
+            <h3>
+                <span class="p-honorific-prefix">{{ honorific }}</span>
+                <span class="p-name">{{ name }}</span>
+                <!-- TODO: add branch indicators -->
+            </h3>
+            <p>
+                <span class="p-post-code">{{ address }}</span>
+            </p>
+            <p>{{ age }} Jahre, geb. am <span class="dt-bday">{{ dob }}</span></p>
+        </a>
+      </li>
+    {{/results}}
+  </ul>
+
 </div>
