Add headers for customer card and branches

--- a/views/partners.mustache
+++ b/views/partners.mustache
@@ -1,7 +1,10 @@
-<div class="container">
-  <h1>Welcome!</h1>
+{{> partials/customer_card }}
+{{> partials/branches }}
 
-  <p>Hi {{ title }}</p>
+<div class="container">
+  <header class="page-header">
+    <h1>Kundendeckblatt</h1>
+  </header>
 
   <h2>Verträge</h2>
 
