fix partner uri

--- a/views/search_results.mustache
+++ b/views/search_results.mustache
@@ -6,7 +6,7 @@
   <ul class="onebox-results">
     {{#results}}
       <li class="list-group-item selected">
-        <a href="/partners/{{ partnerId }}">
+        <a href="{{ url }}">
             <h3>
                 <span class="p-honorific-prefix">{{ honorific }}</span>
                 <span class="p-name">{{ name }}</span>
