--- a/views/search.mustache
+++ b/views/search.mustache
@@ -7,7 +7,7 @@
       <div class="form-group onebox-searchgroup">
           <label class="sr-only" for="onebox-search">Suche</label>
           <input type="search" id="onebox-search" name="query"
-                  class="onebox-search"
+                  class="onebox-search autocomplete"
                   placeholder="nach Kundendaten suchen, z.B. &quot;Rich&quot;" autofocus>
       </div>
       <div class="btn-group onebox-settings">
