Use own mustache adapter
This has several advantages over mustache-express:

1. Allow to use locals in the layout, too
2. Allow to deactivate the layout in the render call
3. Put partials in their own sub folder

--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    {{> partials/nav }}
+    {{> nav }}
     {{{ yield }}}
 
     <script src="/assets/application.js"></script>
