--- a/views/partners.mustache
+++ b/views/partners.mustache
@@ -1,5 +1,5 @@
-{{> partials/customer_card }}
-{{> partials/branches }}
+{{> customer_card }}
+{{> branches }}
 
 <div class="container">
   <header class="page-header">
