Move customer card and branches to the layout

--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -9,6 +9,11 @@
 
   <body>
     {{> nav }}
+    {{# partner }}
+      {{> customer_card }}
+      {{> branches }}
+    {{/ partner }}
+
     {{{ yield }}}
 
     <script src="/assets/application.js"></script>
