--- a/views/partners.mustache
+++ b/views/partners.mustache
@@ -5,74 +5,17 @@
 
   <div class="row">
     <div class="col-md-8">
-      <div class="listing-header">
-        <h2>Kontakthistorie</h2>
-      </div>
-
-      <div class="listing">
-        <ol class="contact-history-entries list">
-        {{# contacts }}
-          <li>
-            <div class="entry">
-              <span class="contact-history-entry-type"><i data-toggle="tooltip" title="" class="{{ icon }}" data-original-title="Termin"></i>&nbsp;{{ type }}</span>
-              <time class="contact-history-entry-date" datetime="{{ date }}">{{ formattedDate }}</time>
-              {{# advisor }}
-                <span class="contact-history-entry-clerk">{{ advisor }}</span>
-              {{/ advisor }}
-              <p class="contact-history-entry-subject">{{ title }}
-            </div>
-          </li>
-        {{/ contacts }}
-        </ol>
-      </div>
+      {{> contact_history }}
     </div>
 
     <div class="col-md-4">
-      <div class="listing-header">
-        <h2>Netzwerk</h2>
-      </div>
-
-      <ul class="contact-network">
-      {{# household }}
-        <li>
-          <a href="#" class="h-card">{{ name }}</a>
-          <span class="contact-role">
-            <span class="contact-role-name">{{ relationship }}</span>
-          </span>
-        </li>
-      {{/ household }}
-      </ul>
+      {{> contact_network }}
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-12">
-      <div class="listing-header">
-        <h2>Verträge</h2>
-      </div>
-
-      <div class="table-responsive">
-        <div class="listing">
-          <table class="portfolio-overview table">
-            <thead>
-              <tr>
-                <th class="sort" data-sort="col-portfolio-branch">Sparte</th>
-                <th class="sort text-right" data-sort="col-portfolio-payment-amount">Beitrag</th>
-              </tr>
-            </thead>
-            <tbody class="list">
-              {{# contracts }}
-                <tr>
-                <td class="col-portfolio-branch">
-                  <i class="{{ icon }}"></i>
-                  <span class="branch-selector-item-caption">{{ branch }}</span>
-                </td>
-                <td class="col-portfolio-payment-amount text-right">{{ formattedFee }}</td>
-                </tr>
-              {{/ contracts }}
-            </tbody>
-        </div>
-      </div>
+      {{> portfolio_overview }}
     </div>
   </div>
 
