add portfolio shelf

--- a/views/partials/customer_card.mustache
+++ b/views/partials/customer_card.mustache
@@ -12,6 +12,7 @@
                         <a href="#" class="customer-card-flag" data-toggle="popover" data-placement="bottom" data-content="Der Kunde ist Nutzer des Onlineservices Meine LVM.">WEB</a>
                     </span>
                 </div>
+                {{>portfolio_shelf}}
                 <div class="customer-card-drawer dropdown">
                     <button class="customer-card-drawer-btn dropdown-toggle" type="button" id="customer-card-drawer-btn-id" data-toggle="dropdown" data-bubble="4">
                         <i class="icon-id-2-filled"></i>
