Write a test for the search process

--- a/views/search.mustache
+++ b/views/search.mustache
@@ -9,6 +9,7 @@
           <input type="search" id="onebox-search" name="query"
                   class="onebox-search autocomplete"
                   placeholder="nach Kundendaten suchen, z.B. &quot;Rich&quot;" autofocus>
+          <input type="submit" value="Submit">
       </div>
       <div class="btn-group onebox-settings">
           <button type="button" class="btn btn-link btn-lg dropdown-toggle onebox-settings-btn" data-toggle="dropdown">
