--- a/views/partials/portfolio_shelf.mustache
+++ b/views/partials/portfolio_shelf.mustache
@@ -1,19 +1,19 @@
 <ul class="customer-card-portfolio">
   <li class="customer-card-portfolio-item">
     <a href="#" class="customer-card-portfolio-item-link collection-preview"
-                data-popover-content="#portfolio-item-popover-test">
+                data-popover-content="#portfolio-item-popover-offers">
       Angebote <span class="customer-card-portfolio-item-quantity">({{ offers.length }})</span>
     </a>
   </li>
   <li class="customer-card-portfolio-item">
     <a href="#" class="customer-card-portfolio-item-link collection-preview"
-                data-popover-content="#portfolio-item-popover-test">
+                data-popover-content="#portfolio-item-popover-proposals">
       Anträge <span class="customer-card-portfolio-item-quantity">({{ proposals.length }})</span>
     </a>
   </li>
   <li class="customer-card-portfolio-item">
     <a href="#" class="customer-card-portfolio-item-link collection-preview"
-                data-popover-content="#portfolio-item-popover-test">
+                data-popover-content="#portfolio-item-popover-contracts">
       Verträge <span class="customer-card-portfolio-item-quantity">({{ contracts.length }})</span>
     </a>
   </li>
@@ -25,9 +25,23 @@
   </li>
 </ul>
 
-<div class="collection-excerpt" id="portfolio-item-popover-test">
-    <h3 class="collection-excerpt-title">
-        Schnellansicht
-        <a href="#" class="collection-link">Alle anzeigen</a></h3>
-    <p>N/A</p>
+<div class="collection-excerpt" id="portfolio-item-popover-offers">
+  <h3 class="collection-excerpt-title">
+    Schnellansicht
+    <a href="offers" class="collection-link">Alle anzeigen</a></h3>
+  <p>N/A</p>
+</div>
+
+<div class="collection-excerpt" id="portfolio-item-popover-proposals">
+  <h3 class="collection-excerpt-title">
+    Schnellansicht
+    <a href="proposals" class="collection-link">Alle anzeigen</a></h3>
+  <p>N/A</p>
+</div>
+
+<div class="collection-excerpt" id="portfolio-item-popover-contracts">
+  <h3 class="collection-excerpt-title">
+    Schnellansicht
+    <a href="contracts" class="collection-link">Alle anzeigen</a></h3>
+  <p>N/A</p>
 </div>
