transform partner backend keys

--- a/views/partials/portfolio_shelf.mustache
+++ b/views/partials/portfolio_shelf.mustache
@@ -28,20 +28,20 @@
 <div class="collection-excerpt" id="portfolio-item-popover-offers">
   <h3 class="collection-excerpt-title">
     Schnellansicht
-    <a href="offers" class="collection-link">Alle anzeigen</a></h3>
+    <a href="{{ partner._links.offers.href }}" class="collection-link">Alle anzeigen</a></h3>
   <p>N/A</p>
 </div>
 
 <div class="collection-excerpt" id="portfolio-item-popover-proposals">
   <h3 class="collection-excerpt-title">
     Schnellansicht
-    <a href="proposals" class="collection-link">Alle anzeigen</a></h3>
+    <a href="{{ partner._links.proposals.href }}" class="collection-link">Alle anzeigen</a></h3>
   <p>N/A</p>
 </div>
 
 <div class="collection-excerpt" id="portfolio-item-popover-contracts">
   <h3 class="collection-excerpt-title">
     Schnellansicht
-    <a href="contracts" class="collection-link">Alle anzeigen</a></h3>
+    <a href="{{ partner._links.contracts.href }}" class="collection-link">Alle anzeigen</a></h3>
   <p>N/A</p>
 </div>
