--- a/views/partials/customer_card.mustache
+++ b/views/partials/customer_card.mustache
@@ -3,8 +3,8 @@
         <article class="customer-card h-card accordion">
             <div class="accordion-title">
                 <div class="customer-card-name">
-                    <a href="/customers/{{ partner.partnerId }}" class="customer-card-name-link">
-                        <span class="p-name">{{ partner.anrede }} {{ partner.vorname }} {{ partner.name }}</span>
+                    <a href="{{ partner._links.self.href }}" class="customer-card-name-link">
+                        <span class="p-name">{{ partner.honorific }} {{ partner.firstName }} {{ partner.name }}</span>
                     </a>
                     <span class="customer-card-flags">
                         <a href="#" class="customer-card-flag" data-toggle="popover" data-placement="bottom" data-content="Es liegt noch keine Einverständniserklärung für den Kontakt per Telefon und E-Mail zur Akquise vor.">AQ</a>
@@ -31,20 +31,20 @@
             </div>
             <div class="customer-card-details">
                 <div class="customer-card-contact">
-                    <p class="p-street-address">{{ partner.anschrift.strasse }}</p>
+                    <p class="p-street-address">{{ partner.address.street }}</p>
                     <p>
-                        <span class="p-postal-code">{{ partner.anschrift.plz }}</span>
-                        <span class="p-locality">{{ partner.anschrift.ort }}</span>
+                        <span class="p-postal-code">{{ partner.address.postcode }}</span>
+                        <span class="p-locality">{{ partner.address.city }}</span>
                     </p>
                     <a href="tel:{{ partner.telnummer }}">
                         <i class="navbar-icon icon-call-1-filled"></i>
-                        <span class="p-tel">{{ partner.telnummer }}</span>
+                        <span class="p-tel">{{ partner.phone }}</span>
                     </a>
                 </div>
                 <div class="customer-card-misc">
-                    <p>{{ partner.alter }} Jahre, geb. am <span class="dt-bday">{{ partner.geburtsdatum }}</span></p>
-                    <p>{{ partner.familienstand }}, {{ partner.anzahlKinder }}</p>
-                    <p class="p-job-title">{{ partner.beruf }}</p>
+                    <p>{{ partner.age }} Jahre, geb. am <span class="dt-bday">{{ partner.dob }}</span></p>
+                    <p>{{ partner.personalStatus }}, {{ partner.childrenCount }}</p>
+                    <p class="p-job-title">{{ partner.job }}</p>
                 </div>
             </div>
         </article>
