basic postbox integration

--- a/views/partials/nav.mustache
+++ b/views/partials/nav.mustache
@@ -38,8 +38,7 @@
                     </form>
                 </li>
                 <li>
-                    <a href="/messages" class="notification-menu collection-preview"
-                            data-popover-content="#notifications" data-bubble="3">
+                    <a href="http://localhost:9000/m50000/messages" class="notification-menu" id="postbox-link" data-error-msg="Briefkasten zurzeit nicht erreichbar!">
                         <span class="topbar-notifications icon-mail-2-filled icon-lg"></span>
                         <span class="topbar-notifications-label">Benachrichtigungen</span>
                     </a>
