Use the new data attribute for the accordion

--- a/views/partials/customer_card.mustache
+++ b/views/partials/customer_card.mustache
@@ -1,6 +1,6 @@
 <div class="customer-card-wrapper">
     <div class="container">
-        <article class="customer-card h-card accordion">
+        <article data-accordion="active" class="customer-card h-card accordion">
             <div class="accordion-title">
                 <div class="customer-card-name">
                     <a href="{{ partner._links.self.href }}" class="customer-card-name-link">
