Prepare auto completion for extraction to lvm-las-assets

--- a/views/search.mustache
+++ b/views/search.mustache
@@ -7,7 +7,10 @@
     <div class="form-group onebox-searchgroup">
       <label class="sr-only" for="onebox-search">Suche</label>
       <input type="search" id="onebox-search" name="query"
-              class="onebox-search autocomplete"
+              data-complete="auto"
+              data-complete-results="onebox-results"
+              data-complete-min-length="3"
+              class="onebox-search"
               placeholder="nach Kundendaten suchen, z.B. &quot;Rich&quot;" autofocus>
     </div>
     <div class="btn-group onebox-settings">
