--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>LVM LAS ROCA</title>
     <meta name="description" content="">
+    <meta name=viewport content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/assets/application.css">
   </head>
 
