--- a/views/partials/offers.mustache
+++ b/views/partials/offers.mustache
@@ -2,6 +2,7 @@
   <table class="portfolio-overview table">
     <thead>
       <tr>
+        <th class="sort" data-sort="col-portfolio-id">#</th>
         <th class="sort" data-sort="col-portfolio-status">Status</th>
         <th class="sort" data-sort="col-portfolio-role">Beteiligung</th>
         <th class="sort" data-sort="col-portfolio-id">Versicherungsschein</th>
@@ -17,6 +18,7 @@
     <tbody>
       {{# offers }}
       <tr>
+        <td class="col-portfolio-id">{{ id }}</td>
         <td class="col-portfolio-status">
           <i title="" data-original-title="" class="icon-circle-line active" data-toggle="popover" data-content="Storniert" data-placement="top"></i>
           <!-- <span class="col&#45;portfolio&#45;status&#45;label">Storniert</span> -->
