--- a/views/partials/contracts.mustache
+++ b/views/partials/contracts.mustache
@@ -2,18 +2,26 @@
   <table class="portfolio-overview table">
     <thead>
       <tr>
+        <th class="sort" data-sort="col-portfolio-id">#</th>
         <th class="sort" data-sort="col-portfolio-branch">Sparte</th>
         <th class="sort text-right" data-sort="col-portfolio-payment-amount">Beitrag</th>
+        <th>Aktion</th>
       </tr>
     </thead>
     <tbody>
       {{# contracts }}
       <tr>
+        <td class="col-portfolio-id">
+          <a href="{{ contractUri }}">{{ id }}</a>
+        </td>
         <td class="col-portfolio-branch">
           <i class="{{ icon }}"></i>
           <span class="branch-selector-item-caption">{{ branch }}</span>
         </td>
         <td class="col-portfolio-payment-amount text-right">{{ formattedFee }}</td>
+        <td>
+          <a href="{{ contractUri }}" class="btn btn-default btn-xs">Öffnen</a>
+        </td>
       </tr>
       {{/ contracts }}
     </tbody>
