Show the full name of a person in the search results

--- a/views/search_results.mustache
+++ b/views/search_results.mustache
@@ -9,7 +9,7 @@
         <a href="{{ url }}">
             <h3>
                 <span class="p-honorific-prefix">{{ honorific }}</span>
-                <span class="p-name">{{ name }}</span>
+                <span class="p-name">{{ vorname }} {{ name }}</span>
                 <!-- TODO: add branch indicators -->
             </h3>
             <p>
