add jquery pjax

--- a/views/layout.mustache
+++ b/views/layout.mustache
@@ -17,7 +17,9 @@
       </div>
     {{/ partner }}
 
-    {{{ yield }}}
+    <div id="pjax-container">
+      {{{ yield }}}
+    </div>
 
     <script src="/assets/application.js"></script>
   </body>
