--- a/views/partials/offers.mustache
+++ b/views/partials/offers.mustache
@@ -20,7 +20,7 @@
       {{# offers }}
       <tr>
         <td class="col-portfolio-id">
-          <a href="{{ offerUri }}">{{ id }}</a>
+          <a href="{{ offerUri }}" data-pjax="active">{{ id }}</a>
         </td>
         <td class="col-portfolio-status">
           <i title="" data-original-title="" class="icon-circle-line active" data-toggle="popover" data-content="Storniert" data-placement="top"></i>
@@ -41,7 +41,7 @@
         </td>
         <td class="col-portfolio-payment-amount text-right">{{ formattedFee }}</td>
         <td>
-          <a href="{{ offerUri }}" class="btn btn-default btn-xs">Öffnen</a>
+          <a href="{{ offerUri }}" class="btn btn-default btn-xs" data-pjax="active">Öffnen</a>
         </td>
       </tr>
       {{/ offers }}
