--- a/views/contracts/show.mustache
+++ b/views/contracts/show.mustache
@@ -34,31 +34,32 @@
 
   <div class="row">
     <div class="col-md-12">
-      <ul class="nav nav-tabs scene-contents" role="tablist">
-        <li class="active"><a href="#kfz-fahrzeugdaten" class="kbd" role="tab" data-toggle="tab">Fahrzeugdaten</a></li>
-        <li><a href="#kfz-nutzung" class="kbd" role="tab" data-toggle="tab">Nutzung</a></li>
-        <li><a href="#kfz-extra" class="kbd" role="tab" data-toggle="tab">Extra</a></li>
-        <li><a href="#kfz-doku" class="kbd" role="tab" data-toggle="tab">Dokumentation</a></li>
-      </ul>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-12">
-      <div class="tab-content">
-        <div id="kfz-fahrzeugdaten" class="tab-pane active">
-          <p class="scene-form">Noch nicht implementiert.</p>
-        </div>
-        <div id="kfz-nutzung" class="tab-pane">
-          <p class="scene-form">Noch nicht implementiert.</p>
-        </div>
-        <div id="kfz-extra" class="tab-pane">
-          <p class="scene-form">Noch nicht implementiert.</p>
-        </div>
-        <div id="kfz-doku" class="tab-pane">
-          <p class="scene-form">Noch nicht implementiert.</p>
+      <div class="contract-details">
+
+        <ul class="nav nav-tabs scene-contents" role="tablist">
+          <li class="active"><a href="#kfz-fahrzeugdaten" class="kbd" role="tab" data-toggle="tab">Fahrzeugdaten</a></li>
+          <li><a href="#kfz-nutzung" class="kbd" role="tab" data-toggle="tab">Nutzung</a></li>
+          <li><a href="#kfz-extra" class="kbd" role="tab" data-toggle="tab">Extra</a></li>
+          <li><a href="#kfz-doku" class="kbd" role="tab" data-toggle="tab">Dokumentation</a></li>
+        </ul>
+
+        <div>
+          <div id="kfz-fahrzeugdaten" class="tab-pane active">
+            <p class="scene-form">Noch nicht implementiert.</p>
+          </div>
+          <div id="kfz-nutzung" class="tab-pane">
+            <p class="scene-form">Noch nicht implementiert.</p>
+          </div>
+          <div id="kfz-extra" class="tab-pane">
+            <p class="scene-form">Noch nicht implementiert.</p>
+          </div>
+          <div id="kfz-doku" class="tab-pane">
+            <p class="scene-form">Noch nicht implementiert.</p>
+          </div>
         </div>
       </div>
+
     </div>
   </div>
 
