--- a/views/contracts/show.mustache
+++ b/views/contracts/show.mustache
@@ -45,9 +45,115 @@
         </ul>
 
         <div>
-          <div id="kfz-fahrzeugdaten" class="tab-pane active">
-            <p class="scene-form">Noch nicht implementiert.</p>
+          <div id="kfz-fahrzeugdaten" class="tab-pane">
+
+            <form class="form-horizontal scene-form" role="form">
+              <fieldset class="scene-fieldset">
+                <div class="form-group">
+                  <label for="kfz-fahrzeugart" class="control-label">Fahrzeugart</label>
+                  <div class="fields">
+                    <input type="text" id="kfz-fahrzeugart" class="form-control" value="{{ contract.fahrzeugdaten.fahrzeugart }}" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-kennzeichen" class="control-label">Kennzeichen</label>
+                  <div class="fields form-inline">
+                    <input type="text" id="kfz-kennzeichen" class="form-control" value="{{ contract.fahrzeugdaten.kennzeichen }}" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-plz" class="control-label"><abbr title="Postleitzahl">PLZ</abbr> / Ort</label>
+                  <div class="fields">
+                    <input type="text" id="kfz-plz" class="form-control" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-herstellernr" class="control-label">Hersteller-Nr.</label>
+                  <div class="fields form-inline">
+                    <div class="input-group">
+                      <input type="search" id="kfz-herstellernr" class="form-control" value="{{ contract.fahrzeugdaten.hsn }}" disabled>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-typschluesselnr" class="control-label">Typschlüssel-Nr. <a class="control-label-help-link" data-toggle="modal" data-target=".modal-help-example" href="#"><i class="icon-question"></i></a></label>
+                  <div class="fields">
+                    <input type="search" id="kfz-typschluesselnr" class="form-control" value="{{ contract.fahrzeugdaten.typschl }}" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-erstzulassung" class="control-label">Erstzulassung</label>
+                  <div class="fields">
+                    <input type="month" id="kfz-erstzulassung" class="form-control" value="{{ contract.fahrzeugdaten.erstzulassung }}" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-erwerb" class="control-label">Erwerb <abbr>VN</abbr> / <abbr>FH</abbr></label>
+                  <div class="fields">
+                    <input type="month" id="kfz-erwerb" class="form-control" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-fahrgestell" class="control-label">Fahrgestell-Nr.</label>
+                  <div class="fields">
+                    <input type="text" id="kfz-fahrgestell" class="form-control" value="{{ contract.fahrzeugdaten.fahrgestell }}" disabled>
+                  </div>
+                </div>
+              </fieldset>
+
+              <fieldset class="scene-fieldset">
+                <div class="form-group form-group-multiple">
+                  <label for="kfz-saison-von" class="control-label">Saison von</label>
+                  <div class="col-sm-3 form-group-multiple-item">
+                    <input type="month" id="kfz-saison-von" class="form-control" disabled>
+                  </div>
+                  <label for="kfz-saison-bis" class="control-label">Saison bis</label>
+                  <div class="col-sm-3 form-group-multiple-item">
+                    <input type="month" id="kfz-saison-bis" class="form-control" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group form-group-multiple">
+                  <label for="kfz-kennzeichen-art" class="control-label">KFZ-Kennzeichen-Art</label>
+                  <div class="col-sm-3 form-group-multiple-item">
+                    <input type="text" id="kfz-kennzeichen-art" class="form-control" value="{{ contract.fahrzeugdaten.kennzeichenart }}" disabled>
+                  </div>
+
+                  <label for="kfz-wechselkennzeichen" class="control-label">Wechselkennzeichen</label>
+                  <div class="col-sm-3 form-group-multiple-item">
+                    <input type="text" id="kfz-wechselkennzeichen" class="form-control" value="{{ contract.fahrzeugdaten.wechselkennzeichen }}" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group form-group-multiple">
+                  <label for="kfz-leistung-kw" class="control-label">Leistung (kW)</label>
+                  <div class="col-sm-3 form-group-multiple-item">
+                    <input type="text" id="kfz-leistung-kw" class="form-control" disabled>
+                  </div>
+                  <label for="kfz-leistung-ps" class="control-label">Leistung (PS)</label>
+                  <div class="col-sm-3 form-group-multiple-item">
+                    <input type="text" id="kfz-leistung-ps" class="form-control" value="{{ contract.fahrzeugdaten.fahrzeugstaerkePS }}" disabled>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <label for="kfz-austauschmotor" class="control-label">Austauschmotor</label>
+                  <div class="col-sm-3 form-group-multiple-item">
+                    <input type="text" id="kfz-austauschmotor" class="form-control" value="{{ contract.fahrzeugdaten.austauschmotor }}" disabled>
+                  </div>
+                </div>
+
+              </fieldset>
+            </form>
           </div>
+
           <div id="kfz-nutzung" class="tab-pane">
             <p class="scene-form">Noch nicht implementiert.</p>
           </div>
